--- a/bar.css
+++ b/bar.css
@@ -1,3 +1,8 @@
+body{
+
+	font-family: 'Cutive Mono', monospace;
+	background-image: url("IMG_2654.JPG");
+}
 ul{
 
 	list-style-type: none;
@@ -9,21 +14,17 @@ ul{
 	position: fixed;
 	overflow: auto;
 }
-
-div{
-	margin-left:25%;
-	padding:1px 16px;
-	height:1000px;
-}
-
-div h1{
-	
-	
+h1,h2,h4{
+	text-decoration: underline overline;
+        color: #687864;
+	/*color: #3170BE;*/
 	
 }
 table th{
-	width: 75%;
+	/*width: 75%;*/
 	font-weight: normal;
+	text-align: left;
+
 }
 a{
 	text-decoration: none;
@@ -48,4 +49,36 @@ h6{
 	text-align: left;
 
 }
+.topnav {
+    background-color: #5085A5;
+    overflow: hidden;
+}
 
+.topnav a {
+    float: left;
+    display: block;
+    color: #F7F9FB;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+article {
+    margin-left: 400px;
+    padding: 1em;
+    overflow: hidden;
+    color: #31708E;
+}
+ol {
+  list-style-type: square;
+}
